Order boat classes in race results by id Open sponsor urls in new tab Move boat_class and race_id tables for admin_race_results index to columns to fix overlap issue in Firefox Add more padding between tables

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -18,6 +18,7 @@ h4 {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 18px;
   color: #18639B;
+  margin-bottom: 15px;
 }
 
 h5 {
@@ -42,6 +43,7 @@ a {
 
 table {
   width: 90%;
+  margin-bottom: 30px;
 }
 
 .float-right {
